--- a/templates/job_seeker_dashboard.html
+++ b/templates/job_seeker_dashboard.html
@@ -1,74 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>job_seeker_dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/mystyle.css">
 </head>
+
 <body>
     <div class="m-4">
         <h3>Welcome {{name}}</h3>
-    
+
         <form method="POST">
             <div class="m-3">
-            <button type="submit" name="profile">profile</button>
-            <br>
-            <br>
-            <button type="submit" name="searchjob">Search Job</button>
-            {% if request.method == 'POST' and 'profile' in request.form %}
+                <button class="highlight" type="submit" name="profile">profile</button>
+                <br>
+                {% if request.method == 'POST' and 'profile' in request.form %}
             </div>
-            <div >
+            <div class="m">
                 Name<br>
-                <input required type="text" name="name" value="{{profile[1]}}">
+                <input class="inp" required type="text" name="name" value="{{profile[1]}}">
             </div>
-            <div >
+            <div class="m">
                 Age<br>
-                <input required type="text" name="age" value="{{profile[2]}}">
+                <input class="inp" required type="text" name="age" value="{{profile[2]}}">
             </div>
-            <div >
+            <div class="m">
                 Gender<br>
                 <input required type="text" name="gender" value="{{profile[3]}}">
-            </div> 
-            <div >
+            </div>
+            <div class="m">
                 Education<br>
-                <input required type="text" name="education" value="{{profile[5]}}">
+                <input class="inp" required type="text" name="education" value="{{profile[5]}}">
             </div>
-            <div >
+            <div class="m">
                 Mobile<br>
-                <input required type="text" name="mobile" value="{{profile[10]}}">
+                <input class="inp" required type="text" name="mobile" value="{{profile[10]}}">
             </div>
-            <div >
+            <div class="m">
                 Area<br>
-                <input required type="text" name="area" value="{{profile[9]}}">
+                <input class="inp" required type="text" name="area" value="{{profile[9]}}">
             </div>
-            <div >
+            <div class="m">
                 City<br>
-                <input required type="text" name="city" value="{{profile[8]}}">
+                <input class="inp" required type="text" name="city" value="{{profile[8]}}">
             </div>
-            <div >
+            <div class="m">
                 Email id<br>
-                <input required type="text" name="email_id" value="{{profile[6]}}">
+                <input class="inp" required type="text" name="email_id" value="{{profile[6]}}">
             </div>
-            <div >
+            <div class="m">
                 Password<br>
-                <input required type="text" name="password" value="{{profile[7]}}">
+                <input class="inp" required type="text" name="password" value="{{profile[7]}}">
             </div>
-            <div >
+            <div class="m">
                 Available<br>
-                <input required type="text" name="available" value="{{profile[11]}}">
+                <input class="inp" required type="text" name="available" value="{{profile[11]}}">
             </div>
+            <br>
             <div class="m-3">
-                <button type="submit" name="sub4">save profile</button>
+                <button class="ml highlight" type="submit" name="sub4">save profile</button>
             </div>
-        
-        
-        {% endif %}
+            {% endif %}
             <br>
             <br>
-            <button type="submit" name="logo">Logout</button>
-        
+            <button class="highlight" type="submit" name="searchjob">Search Job</button>
+            <br>
+            <br>
+            <button class="highlight" type="submit" name="logo">Logout</button>
+
         </form>
         <br>
         <br>
@@ -76,12 +74,23 @@
             <strong>
                 You have applied in total {{tot_appl}} job applications.
                 <br>We will update you if the status changes.
-            </strong> 
+            </strong>
         </div>
     </div>
-    
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- <style>
+        .highlight:hover {
+            border: 2px solid black;
+        }
+    </style> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
