--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/mystyle.css">
 </head>
 <body>
     <div class="m-4">
         <form method="POST">
-            <h5>Login</h5>
-            <input type="email" name="email" placeholder="Enter email">
+            <h4>Login</h4>
+            <input class="inp" type="email" name="email" placeholder="Enter email" autocomplete="off">
             <br>
-            <input type="password" name="pass" placeholder="Password">
-            
-            <div class="m-3">
-                <button type="submit">Submit</button>
-            </div>
-
+            <div class="gap"></div>
+            <input class="inp" type="password" name="pass" placeholder="Password">
+            <br>
+            <br>
+            <!-- <div class="m-3"> -->
+                <button type="submit" class="highlight">Submit</button>
+            <!-- </div> -->
+            <br>
             <br>
                 <h5>Don't have an account yet!</h5>
                 <div class="ml-3">
-                    <button type="submit" name="regemp">Register</button>
+                    <button type="submit" class="highlight" name="regemp">Register</button>
                 </div>
         </form>
     </div>
