--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>employer_registration</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head>
+    <title>employer_registration</title>
+    <link rel="stylesheet" href="../static/mystyle.css">
 </head>
+
 <body>
-    <div class="m-4">
     <form method="POST">
-            <div class="m-3">
+        <div class="gap"></div>
+        
+            <div class="m myflex2">
                 <div>
-                    <input required type="radio" name="who" value="emp"><span style="padding: 5pt;">Employer</span>
+                <input required type="radio" name="who" value="emp"><span style="padding: 5pt;">Employer</span>
                 </div>
                 <div>
-                    <input type="radio" name="who" value="js"><span style="padding: 5pt;">Job Seeker</span>
+                <input type="radio" name="who" value="js"><span style="padding: 5pt;">Job Seeker</span>
                 </div>
             </div>
-            <div class="m-2">
+            <br>
+            <div class="myflex half">
+            <div class="m">
                 Name<br>
-                <input required autofocus type="text" name="name">
+                <input class="inp" required autofocus type="text" name="name">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Organization name<br>
-                <input type="text" name="orgname">
+                <input class="inp" type="text" name="orgname">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Age<br>
-                <input type="number" name="age" placeholder="only for job seekers">
+                <input class="inp" type="number" name="age" placeholder="only for job seekers">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Gender<br>
-                <input required type="text" name="gender">
+                <input class="inp" required type="text" name="gender">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Education<br>
-                <input type="text" name="education" placeholder="only for job seekers">
+                <input class="inp" type="text" name="education" placeholder="only for job seekers">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Mobile<br>
-                <input required type="text" name="mobile">
+                <input class="inp" required type="text" name="mobile">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Area<br>
-                <input type="text" name="area">
+                <input class="inp" type="text" name="area">
             </div>
-            <div class="m-2">
+            <div class="m">
                 City<br>
-                <input required type="text" name="city">
+                <input class="inp" required type="text" name="city">
             </div>
-            <div class="m-2">
+            <div class="m">
                 Email<br>
-                <input required type="text" name="email_id">
+                <input class="inp" required type="text" name="email_id">
             </div>
-            <div class="m-2"> 
+            <div class="m">
                 Password<br>
-                <input required type="text" name="password">
+                <input class="inp" required type="text" name="password">
             </div>
-            <div class="m-3">
-                <button type="submit">Save</button>
-            </div>
-        </form>
-    </div>
+        </div>
+        <br>
+        <button class="m highlight" type="submit">Save</button>
+    </form>
 </body>
+
 </html>
